PullRequest: 45 refactor： 升级jdk和spring的版本
Merge branch feat/yiang_upgrade_jdk_and_spring_version of git@code.alipay.com:oceanbase-cloud-platform/odc-mirror.git into dev/4.4.x
https://code.alipay.com/oceanbase-cloud-platform/odc-mirror/pull_requests/45

Reviewed-by: 天客 <guowenlong.gwl@oceanbase.com>


* 头文件修改1
* 头文件修改2
* 头文件修改3
* 头文件修改4
* 头文件修改5
* 类修改
* 脚本修改
* 配置文件修改
* format